--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB clone</title>
 </head>
-<body>
-    <header>
-        <div style="background-color:#FF0000; height: 70px; width: 100%; "></div>
+<body style="margin: 0;padding:0;">
+    <header style="background-color:#FF0000; height: 70px; width: 100%; ">
     </header>
 
-    <footer>
-        <div style="background-color: #00FF00;height: 60px; width: 100%;position: fixed; bottom: 0;">
+    <footer style="background-color: #00FF00;height: 60px; width: 100%;position: fixed; bottom: 0;"> 
             <p style="text-align: center; vertical-align: middle;">Holberton School</p>
-        </div>
     </footer>
     
 </body>
