--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang ="EN">
 <head>
-	<title>Task 5</title>
-	<link rel="icon" type="image/png" href="images/icon.png"/>
-	<link rel="stylesheet" type="text/css" href="styles/4-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-	<link rel="stylesheet" type="text/css" href="styles/5-filters.css">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
+    <link rel="icon" type="image/png" href="/images/icon.png">
+    <title>AirBnB clone</title>
 </head>
 <body>
 	<header></header>
